--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,10 +12,9 @@ import ThemeSwitcher from "./ThemeSwitcher.astro";
         <ThemeSwitcher />
 
         <aside class="flex flex-col justify-center items-center md:flex-row md:h-fit gap-6">
-            <a href="/">link 0</a>
-            <a href="">link 1</a>
-            <a href="">link 2</a>
-            <a href="">link 3</a>
+            <a href="/"> Projects</a>
+            <a href="/#skills">Skills</a>
+            <a href="/"> About Me</a>
         </aside>
 
         <a href="#contacts" class="btn">
