--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -92,6 +92,9 @@ const { title, description } = Astro.props;
                 }
             }
 
+
+            @layer components {}
+
             @layer utilities {
                 .bg-dark {
                     @apply bg-gradient-to-br from-slate-900 to-slate-700;
