--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -34,7 +34,7 @@
 <style>
 
     a {
-        @apply h-8 w-8 flex justify-center items-center text-gray-500 dark:text-dark-primary
+        @apply h-8 w-8 flex justify-center items-center text-gray-500 dark:text-neutral
     }
 
     hr {
