Modifications throughout of styling

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,4 +1,4 @@
-<form class="flex flex-col gap-2 container smaller">
+<form id="contacts" class="flex flex-col gap-2 container smaller">
 
     <h2>Contact Me</h2>
     
@@ -22,8 +22,6 @@
         message
         <textarea
             name="message"
-            cols="30"
-            rows="2"
             placeholder="Mesage here..."
             required></textarea>
     </label>
