--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -22,8 +22,7 @@ const { title, description } = Astro.props;
 
          <!-- Navbar -->
         <Navbar />
-       
-
+        <!-- Content here -->
         <slot />
         <!-- contact me form -->
         <ContactForm />
@@ -51,21 +50,33 @@ const { title, description } = Astro.props;
                     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
                 }
 
-                h1,h2,h3,h4,h5 {
+                h2,h3,h4,h5 {
                     @apply font-semibold
                 }
 
                 h1 {
-                    @apply text-lg font-bold
+                    @apply text-3xl font-bold
+                }
+
+                h2 {
+                    @apply text-2xl
+                }
+
+                h3 {
+                    @apply text-xl
+                }
+
+                h4 {
+                    @apply text-lg
                 }
 
                 label {
-                    @apply flex flex-col gap-4 capitalize;
+                    @apply flex flex-wrap gap-4 capitalize cursor-pointer;
                 }
 
                 input,
                 textarea {
-                    @apply w-full px-4 bg-inherit border border-zinc-600 dark:border-zinc-300 rounded-md min-h-10;
+                    @apply w-full px-4 bg-inherit border border-zinc-600 dark:border-zinc-300 rounded-md min-h-8;
                 }
 
                 textarea {
@@ -75,6 +86,10 @@ const { title, description } = Astro.props;
                 input::placeholder,
                 text {
                     @apply text-gray-500;
+                }
+
+                input[type="radio"], input[type="checkbox"] {
+                    @apply w-fit inline-block
                 }
 
                 a {
