--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,4 +1,5 @@
 ---
+import { string } from "astro/zod";
 import type { CollectionEntry } from "astro:content";
 
 interface Props {
@@ -10,15 +11,15 @@ const { project } = Astro.props;
 ---
 
 <a
-  class="grid grid-cols-1 grid-rows-2 relative shadow-sm outline-1 outline-indigo-100 shadow-indigo-400 hover:shadow-2xl dark:border-gray-50 h-96"
-  href="/projects"
+  class="grid grid-cols-1 grid-rows-2 relative shadow-md shadow-zinc-300 hover:shadow-emerald-300 dark:border-gray-50  w-full h-96"
+  href=`/projects/${project.slug}`
 >
   <img
-    class="h-full w-full object-cover bg-yellow-600"
+    class="h-full w-full object-cover blur brightness-75"
     src={project.data.image.url}
     alt={project.data.image.alt}
   />
-  <div class="grid grid-rows-5 gap-3 p-4">
+  <div class="grid grid-rows-5 gap-3 p-4 text-sm md:text-base">
     <h2
       class="absolute top-14 left-1/2 -translate-x-1/2 text-white w-full px-2 text-center"
     >
@@ -28,7 +29,7 @@ const { project } = Astro.props;
     <p class="row-span-2"><b>Description:</b> {project.data.description}</p>
     <p class="row-span-2">
       <b>Tech:</b>{
-        project.data.tags.map((tag) => (
+        project.data.tags.map((tag: string) => (
           <span class="space-x-4 capitalize"> {tag} ,</span>
         ))
       }
@@ -38,6 +39,10 @@ const { project } = Astro.props;
 
 <style>
   p {
-    /* @apply  */
+    @apply h-full text-clip overflow-hidden;
+  }
+
+  a:hover img {
+    @apply brightness-100 blur-none
   }
 </style>
