--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -18,14 +18,14 @@ const allProjects = await getCollection("projects");
 
     <section class="flex items-center justify-between">
 
-      <label class="w-1/3">
+      <label class="w-2/3 md:w-1/3">
         <input type="search" name="find" placeholder="find framewok, Language" >
       </label>
 
       <div>
         results: 8/10
       </div>
-      
+
     </section>
 
     <p class="mx-auto w-fit">This is where I will post about my journey learning Astro.</p>
