--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,46 +1,79 @@
-<form id="contacts" class="flex flex-col gap-2 container smaller">
 
-    <h2>Contact Me</h2>
+
+<h2 class="text-center w-fit mx-auto my-9">Contact Me</h2>
+
+<section id="contacts" class="container smaller flex flex-col md:flex-row justify-center items-center gap-4">
+
+    <form id="contacts" class="w-full md:w-1/2 flex flex-col gap-2">
+   
+        <label>
+            email
+            <input
+                type="email"
+                placeholder="Email: example@mailbox.com "
+                name="email"
+                required
+            />
+        </label>
     
-    <p>
-        Eius laboriosam nulla reprehenderit obcaecati corporis dolor in
-        veniam nostrum impedit at aliquid et provident, reiciendis illo!
-        Vel porro ullam exercitationem veniam!
-    </p>
+        <label>
+            message
+            <textarea
+                name="message"
+                placeholder="Mesage here..."
+                required></textarea>
+        </label>
+    
+        <button type="submit" class="btn">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="2rem"
+                width="2rem"
+                class="space-x-2"
+                viewBox="0 0 20 20"
+                ><g fill="currentColor"
+                    ><path
+                        d="M2 7a6 6 0 1 1 2.996 5.195l-2.338.78a.5.5 0 0 1-.639-.612l.712-2.491A6 6 0 0 1 2 7m4.5-1.5a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm2 2h-2a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1"
+                    ></path><path
+                        d="m12.276 14.947l-2.402-1.2q.662-.185 1.263-.488l1.363.682l4.5-2.25V11a1 1 0 0 0-1-1h-1.674q.23-.481.384-1H16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2v-2.07q.49.07 1 .07v2a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1v-3.191l-4.276 2.138a.5.5 0 0 1-.448 0"
+                    ></path></g
+                ></svg
+            >
+             Send
+        </button>
+    </form>
 
-    <label>
-        email
-        <input
-            type="email"
-            placeholder="Email: example@mailbox.com "
-            name="email"
-            required
-        />
-    </label>
 
-    <label>
-        message
-        <textarea
-            name="message"
-            placeholder="Mesage here..."
-            required></textarea>
-    </label>
+    <ul class="w-full md:w-1/2 flex flex-col justify-start items-start gap-2">
 
-    <button type="submit" class="btn">
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="2rem"
-            width="2rem"
-            class="space-x-2"
-            viewBox="0 0 20 20"
-            ><g fill="currentColor"
-                ><path
-                    d="M2 7a6 6 0 1 1 2.996 5.195l-2.338.78a.5.5 0 0 1-.639-.612l.712-2.491A6 6 0 0 1 2 7m4.5-1.5a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1zm2 2h-2a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1"
-                ></path><path
-                    d="m12.276 14.947l-2.402-1.2q.662-.185 1.263-.488l1.363.682l4.5-2.25V11a1 1 0 0 0-1-1h-1.674q.23-.481.384-1H16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2v-2.07q.49.07 1 .07v2a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1v-3.191l-4.276 2.138a.5.5 0 0 1-.448 0"
-                ></path></g
-            ></svg
-        >
-         Send
-    </button>
-</form>
+        <p>
+            Eius laboriosam nulla reprehenderit obcaecati corporis dolor in
+            veniam nostrum impedit at aliquid et provident.
+        </p>
+
+        <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 2048 2048"><path fill="currentColor" d="M2048 384v85L1024 981L0 469v-85zm-1024 811l1024-512v981H0V683z"/></svg>
+            hadrien.wakacode@gmail.com
+        </li>
+
+        <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M19 9A7 7 0 1 0 5 9c0 1.387.409 2.677 1.105 3.765h-.008L12 22l5.903-9.235h-.007A6.971 6.971 0 0 0 19 9m-7 3a3 3 0 1 1 0-6a3 3 0 0 1 0 6"/></svg>
+            Cameroon, Yaounde Chapelle Ngousso
+        </li>
+
+        <li>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="-6 -1.5 24 24"><path fill="currentColor" d="M3 .565h6a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-14a3 3 0 0 1 3-3m3 17a1 1 0 1 0 0-2a1 1 0 0 0 0 2"/></svg>
+            Tel : +237 678-580-140
+        </li>
+
+
+
+    </ul>
+</section>
+
+<style>
+
+    li {
+        @apply flex justify-center items-center gap-4
+    }
+</style>
