--- a/src/components/headers/Home.astro
+++ b/src/components/headers/Home.astro
@@ -16,10 +16,11 @@ const ab = [
 <header class="min-h-lvh w-full p-4 flex flex-wrap-reverse justify-center items-center">
 
     <section class="text-2xl w-full md:w-2/3">
-        <h2>Hey, Welcome to my Portfolio.</h2>
+        <p>Hey, Welcome to my Portfolio.</p>
         <div>
-            I am a <Scroller list={ab} /> <br>
-            with 2+ years of experience.
+            I am a 
+            <h1>FULL STACK</h1>
+            web developper with 2+ years of experience.
         </div>
     </section>
 
