--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -19,8 +19,7 @@ const { title, description } = Astro.props;
         <title>Astro Porfolio | {title}</title>
     </head>
     <body class="min-h-screen bg-white dark:bg-dark dark:text-gray-100">
-
-         <!-- Navbar -->
+        <!-- Navbar -->
         <Navbar />
         <!-- Content here -->
         <slot />
@@ -37,9 +36,9 @@ const { title, description } = Astro.props;
             @layer base {
                 :root {
                     --pry-clr: #030a3b;
-                    --snd-clr: #FE0000;
+                    --snd-clr: #fe0000;
                     --ntr-clr: #d4d7ed;
-                    --drk-pry-clr: #FE0000;
+                    --drk-pry-clr: #fe0000;
                 }
 
                 * {
@@ -48,30 +47,38 @@ const { title, description } = Astro.props;
 
                 html {
                     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+                    font-size: 15px;
                 }
 
-                h2,h3,h4,h5 {
-                    @apply font-semibold
+                h2,
+                h3,
+                h4,
+                h5 {
+                    @apply font-semibold;
                 }
 
                 h1 {
-                    @apply text-3xl font-bold
+                    @apply text-3xl font-bold;
                 }
 
                 h2 {
-                    @apply text-2xl
+                    @apply text-2xl;
                 }
 
                 h3 {
-                    @apply text-xl
+                    @apply text-xl;
                 }
 
                 h4 {
-                    @apply text-lg
+                    @apply text-lg;
                 }
 
                 label {
                     @apply flex flex-wrap gap-4 capitalize cursor-pointer;
+                }
+
+                label {
+                    @apply hover:font-bold active:text-neutral has-[input:checked]:font-bold has-[input:checked]:text-primary;
                 }
 
                 input,
@@ -88,8 +95,9 @@ const { title, description } = Astro.props;
                     @apply text-gray-500;
                 }
 
-                input[type="radio"], input[type="checkbox"] {
-                    @apply w-fit inline-block
+                input[type="radio"],
+                input[type="checkbox"] {
+                    @apply w-fit inline-block;
                 }
 
                 a {
@@ -107,8 +115,8 @@ const { title, description } = Astro.props;
                 }
             }
 
-
-            @layer components {}
+            @layer components {
+            }
 
             @layer utilities {
                 .bg-dark {
