--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -11,33 +11,60 @@ const allProjects = await getCollection("projects");
 ---
 
 <PageLayout title={pageTitle} description={description}>
-
   <main class="min-h-[60vh] flex flex-col gap-8 container larger">
 
-    <h1 class="text-3xl text-center">Astro Projects Expo</h1>
+    <h1 class="text-3xl text-center">My Journey of none ending Learning.</h1>
 
     <section class="flex items-center justify-between">
-
       <label class="w-2/3 md:w-1/3">
-        <input type="search" name="find" placeholder="find framewok, Language" >
+        <input
+          type="search"
+          name="find"
+          placeholder="find framewok, Language"
+        />
       </label>
 
-      <div>
-        results: 8/10
-      </div>
-
+      <p>Results: 8/10</p>
     </section>
 
-    <p class="mx-auto w-fit">This is where I will post about my journey learning Astro.</p>
+    <hr />
 
+    <section class="flex flex-col-reverse md:flex-row gap-4">
+      <aside class="grid grid-flow-row grid-cols-2 md:grid-cols-3 gap-3">
+        {allProjects.map((project) => <ProjectCard project={project} />)}
+      </aside>
 
-    <section class="grid grid-flow-row grid-cols-2 md:grid-cols-3  gap-3">
-      {allProjects.map((project) => <ProjectCard project={project} />)}
+      <aside
+        class="w-full flex justify-evenly items-center md:justify-start md:items-start md:flex-col md:w-56"
+      >
+        <label>
+          Fullstack
+          <input
+            type="radio"
+            class="opacity-0"
+            name="stack"
+            value="fullstack"
+          />
+        </label>
+
+        <label>
+          Frontend
+          <input type="radio" class="opacity-0" name="stack" value="frontend" />
+        </label>
+
+        <label>
+          Backend
+          <input type="radio" class="opacity-0" name="stack" value="backend" />
+        </label>
+
+        <label>
+          others
+          <input type="radio" class="opacity-0" name="stack" value="other" />
+        </label>
+      </aside>
     </section>
-
   </main>
 </PageLayout>
-
 
 <!-- <style>
   .projects {
